--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "ignore-loader": "^0.1.2",
     "mapshaper": "^0.4.146",
     "mini-css-extract-plugin": "^0.8.0",
-    "sass": "",
+    "sass": "*",
     "sass-loader": "^8.0.0",
     "string-replace-webpack-plugin": "^0.1.3",
     "style-loader": "^1.0.1",
