--- a/package.json
+++ b/package.json
@@ -5,36 +5,36 @@
   "main": "./src/index.js",
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.config.js",
-    "build": "webpack -p --progress --colors --config webpack.config.js && rm -rf docs/static && cp -r static docs/",
+    "build": "webpack --mode production --progress --config webpack.config.js && rm -rf docs/static && cp -r static docs/",
     "deploy": "npm run build && git add docs && git commit -m 'compile for deployment' && git push"
   },
   "repository": "https://github.com/GreenInfo-Network/Westat-Cancer-Template",
   "author": "GreenInfo Network <gin@greeninfo.org>",
   "license": "MIT",
   "dependencies": {
-    "file-saver": "^2.0.2",
+    "file-saver": "^2.0.5",
     "python3": "^0.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.5",
-    "@babel/core": "^7.7.5",
-    "@babel/preset-env": "^7.7.6",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.3.2",
-    "file-loader": "^5.0.2",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
+    "html-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.6.3",
     "ignore-loader": "^0.1.2",
-    "mapshaper": "^0.4.146",
-    "mini-css-extract-plugin": "^0.8.0",
-    "sass": "*",
-    "sass-loader": "^8.0.0",
+    "mapshaper": "^0.6.102",
+    "mini-css-extract-plugin": "^2.9.2",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4",
     "string-replace-webpack-plugin": "^0.1.3",
-    "style-loader": "^1.0.1",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.41.3",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "style-loader": "^4.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
